feature: add icon click behaver.
if you click the icon where is in toolbar, you redirect to Cambridge Dictionary official site.

--- a/static/popup.html
+++ b/static/popup.html
@@ -1,6 +1,5 @@
 <html>
     <body>
-        <h1>Hello Extensions</h1>
-        <script src="../src/popup.js"></script>
+        <h1>Cambridge Dictionary</h1>
     </body>
 </html>
